# aios-framework

./: CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
ai-memory/: active_workstream.md  architecture_context.md  product_context.md  recent_decisions.md  tech_context.md
ai-system/: 00_master_rules.md  01_router.md  02_session_boot.md  03_spec_generator.md  04_execution.md  05_context_refresh.md
aios/: __init__.py
aios.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
aios/cli/: __init__.py  main.py
aios/core/: __init__.py  cache.py  changelog.py  config.py  dependency_graph.py  file_scanner.py  guide.py  hooks.py  incremental.py  kiro_bridge.py  lockfile.py  mcp.py  memory_engine.py  module_loader.py  monorepo.py  onboard.py  progress.py  prompt_engine.py  refine.py  release_gate.py  repo_analyzer.py  router.py  spec_engine.py  steering.py  test_runner.py  watcher.py
aios/policies/: __init__.py
aios/stacks/: __init__.py
aios_kiro.egg-info/: PKG-INFO  SOURCES.txt
commands/: create-steering-documents.md  design-documentation.md  release-validation.md  requirements-ears.md  spec-driven-development.md  task-breakdown.md  troubleshooting.md
scripts/: bootstrap.py  new_task.py  session_refresh.py
specs/bugfix-fix-crash-on-login-page/: bugfix.md  design.md  risks.md  rollback.md  tasks.md  validation.md
specs/feature-add-export-to-pdf-feature/: design.md  requirements.md  risks.md  rollout.md  tasks.md  validation.md
specs/legacy-stabilize-legacy-auth-and-reduce-coupling/: design.md  modernization-roadmap.md  (+5 more)
(+27 files in other folders)
